fix: event spec symbols on shift pressed

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -74,14 +74,14 @@ p {
 
 h1{
     font-family: 'Roboto-bold';
-    font-size: 75px;
+    font-size: 65px;
+    margin: .45em 0;
 }
 
 .text-area{
     width: 100%;
     height: 300px;
-    border: solid 3px #000;
-    margin-top: 20px;
+    border: solid 3px #000;    
     padding: 10px;
     font-size: 25px;
 }
@@ -188,6 +188,17 @@ h1{
             text-transform: uppercase;
         }
     }
+}
+
+.description-tag{
+    font-family: 'Roboto-Medium';
+    font-size: 24px;
+    letter-spacing: 3px;
+    line-height: 30px;
+    margin-top: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 
